// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layoutSketch > matches the Tokyo and Kyoto fixtures > kyoto 1`] = `
[
  {
    "alt": "Kyoto, 2 days · 2 travelers · from Delhi. Route: Kyoto.",
    "day": null,
    "elements": [
      {
        "bold": true,
        "id": "ov-title",
        "kind": "text",
        "lines": [
          "Kyoto",
        ],
        "size": 50,
        "tone": "ink",
        "x": 48,
        "y": 92,
      },
      {
        "id": "ov-rule",
        "kind": "path",
        "points": [
          [
            48,
            108,
          ],
          [
            155.5,
            112,
          ],
        ],
        "tone": "accent",
      },
      {
        "id": "ov-sub",
        "kind": "text",
        "lines": [
          "2 days · 2 travelers · from Delhi",
        ],
        "size": 24,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "cx": 562,
        "cy": 341,
        "fill": true,
        "h": 78,
        "id": "ov-stop-0",
        "kind": "ellipse",
        "tone": "accent",
        "w": 156,
      },
      {
        "anchor": "middle",
        "bold": true,
        "id": "ov-stop-0-name",
        "kind": "text",
        "lines": [
          "Kyoto",
        ],
        "size": 24,
        "tone": "ink",
        "x": 562,
        "y": 339,
      },
      {
        "anchor": "middle",
        "id": "ov-stop-0-days",
        "kind": "text",
        "lines": [
          "days 1–2",
        ],
        "size": 20,
        "tone": "muted",
        "x": 562,
        "y": 404,
      },
      {
        "h": 210,
        "id": "rc-box",
        "kind": "box",
        "tone": "ink",
        "w": 285,
        "x": 790,
        "y": 560,
      },
      {
        "anchor": "middle",
        "bold": true,
        "id": "rc-head",
        "kind": "text",
        "lines": [
          "RECEIPT",
        ],
        "size": 22,
        "tone": "muted",
        "x": 932.5,
        "y": 592,
      },
      {
        "id": "rc-0-l",
        "kind": "text",
        "lines": [
          "Planned",
        ],
        "size": 21,
        "tone": "ink",
        "x": 808,
        "y": 624,
      },
      {
        "anchor": "end",
        "id": "rc-0-v",
        "kind": "text",
        "lines": [
          "₹30,000",
        ],
        "size": 21,
        "tone": "ink",
        "x": 1057,
        "y": 624,
      },
      {
        "id": "rc-1-l",
        "kind": "text",
        "lines": [
          "Budget",
        ],
        "size": 21,
        "tone": "ink",
        "x": 808,
        "y": 652,
      },
      {
        "anchor": "end",
        "id": "rc-1-v",
        "kind": "text",
        "lines": [
          "₹50,000",
        ],
        "size": 21,
        "tone": "ink",
        "x": 1057,
        "y": 652,
      },
      {
        "dashed": true,
        "id": "rc-rule",
        "kind": "path",
        "points": [
          [
            806,
            676,
          ],
          [
            1059,
            676,
          ],
        ],
        "tone": "muted",
      },
      {
        "bold": true,
        "id": "rc-total-l",
        "kind": "text",
        "lines": [
          "Total",
        ],
        "size": 24,
        "tone": "ink",
        "x": 808,
        "y": 704,
      },
      {
        "anchor": "end",
        "bold": true,
        "id": "rc-total-v",
        "kind": "text",
        "lines": [
          "₹30,000",
        ],
        "size": 24,
        "tone": "ink",
        "x": 1057,
        "y": 704,
      },
    ],
    "id": "overview",
    "kind": "overview",
    "title": "Kyoto",
  },
  {
    "alt": "Day 1, in Kyoto. Morning: Kinkaku-ji. Afternoon: Ryoan-ji. Evening: Kitano Tenmangu.",
    "day": 1,
    "elements": [
      {
        "bold": true,
        "id": "d1-title",
        "kind": "text",
        "lines": [
          "Day 1",
        ],
        "size": 46,
        "tone": "ink",
        "x": 48,
        "y": 86,
      },
      {
        "id": "d1-sub",
        "kind": "text",
        "lines": [
          "in Kyoto",
        ],
        "size": 23,
        "tone": "muted",
        "x": 48,
        "y": 124,
      },
      {
        "id": "d1-slot-0",
        "kind": "doodle",
        "name": "sun",
        "size": 26,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d1-slot-0-t",
        "kind": "text",
        "lines": [
          "Morning",
        ],
        "size": 24,
        "tone": "muted",
        "x": 82,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d1-p-kinkaku-ji",
        "kind": "box",
        "label": "Kinkaku-ji",
        "tone": "ink",
        "w": 225,
        "x": 48,
        "y": 196,
      },
      {
        "id": "d1-p-kinkaku-ji-icon",
        "kind": "doodle",
        "name": "sight",
        "size": 34,
        "tone": "accent",
        "x": 60,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d1-p-kinkaku-ji-name",
        "kind": "text",
        "lines": [
          "Kinkaku-ji",
        ],
        "size": 25,
        "tone": "ink",
        "x": 104,
        "y": 234,
      },
      {
        "id": "d1-slot-1",
        "kind": "doodle",
        "name": "partly",
        "size": 26,
        "tone": "muted",
        "x": 313,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d1-slot-1-t",
        "kind": "text",
        "lines": [
          "Afternoon",
        ],
        "size": 24,
        "tone": "muted",
        "x": 347,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d1-p-ryoan-ji",
        "kind": "box",
        "label": "Ryoan-ji",
        "tone": "ink",
        "w": 225,
        "x": 313,
        "y": 196,
      },
      {
        "id": "d1-p-ryoan-ji-icon",
        "kind": "doodle",
        "name": "sight",
        "size": 34,
        "tone": "accent",
        "x": 325,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d1-p-ryoan-ji-name",
        "kind": "text",
        "lines": [
          "Ryoan-ji",
        ],
        "size": 25,
        "tone": "ink",
        "x": 369,
        "y": 234,
      },
      {
        "id": "d1-slot-2",
        "kind": "doodle",
        "name": "moon",
        "size": 26,
        "tone": "muted",
        "x": 578,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d1-slot-2-t",
        "kind": "text",
        "lines": [
          "Evening",
        ],
        "size": 24,
        "tone": "muted",
        "x": 612,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d1-p-kitano-tenmangu",
        "kind": "box",
        "label": "Kitano Tenmangu",
        "tone": "ink",
        "w": 225,
        "x": 578,
        "y": 196,
      },
      {
        "id": "d1-p-kitano-tenmangu-icon",
        "kind": "doodle",
        "name": "sight",
        "size": 34,
        "tone": "accent",
        "x": 590,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d1-p-kitano-tenmangu-name",
        "kind": "text",
        "lines": [
          "Kitano Tenmangu",
        ],
        "size": 25,
        "tone": "ink",
        "x": 634,
        "y": 234,
      },
      {
        "arrow": true,
        "curve": true,
        "id": "d1-a1",
        "kind": "path",
        "points": [
          [
            277,
            271,
          ],
          [
            293,
            253,
          ],
          [
            309,
            271,
          ],
        ],
        "tone": "muted",
      },
      {
        "id": "d1-a1-mode",
        "kind": "doodle",
        "name": "walk",
        "size": 22,
        "tone": "muted",
        "x": 282,
        "y": 221,
      },
      {
        "arrow": true,
        "curve": true,
        "id": "d1-a2",
        "kind": "path",
        "points": [
          [
            542,
            271,
          ],
          [
            558,
            253,
          ],
          [
            574,
            271,
          ],
        ],
        "tone": "muted",
      },
      {
        "id": "d1-a2-mode",
        "kind": "doodle",
        "name": "walk",
        "size": 22,
        "tone": "muted",
        "x": 547,
        "y": 221,
      },
    ],
    "id": "d1",
    "kind": "day",
    "title": "Day 1",
  },
  {
    "alt": "Day 2, in Kyoto. Morning: Kiyomizu-dera.",
    "day": 2,
    "elements": [
      {
        "bold": true,
        "id": "d2-title",
        "kind": "text",
        "lines": [
          "Day 2",
        ],
        "size": 46,
        "tone": "ink",
        "x": 48,
        "y": 86,
      },
      {
        "id": "d2-sub",
        "kind": "text",
        "lines": [
          "in Kyoto",
        ],
        "size": 23,
        "tone": "muted",
        "x": 48,
        "y": 124,
      },
      {
        "id": "d2-slot-0",
        "kind": "doodle",
        "name": "sun",
        "size": 26,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d2-slot-0-t",
        "kind": "text",
        "lines": [
          "Morning",
        ],
        "size": 24,
        "tone": "muted",
        "x": 82,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d2-p-kiyomizu-dera",
        "kind": "box",
        "label": "Kiyomizu-dera",
        "tone": "ink",
        "w": 225,
        "x": 48,
        "y": 196,
      },
      {
        "id": "d2-p-kiyomizu-dera-icon",
        "kind": "doodle",
        "name": "sight",
        "size": 34,
        "tone": "accent",
        "x": 60,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d2-p-kiyomizu-dera-name",
        "kind": "text",
        "lines": [
          "Kiyomizu-dera",
        ],
        "size": 25,
        "tone": "ink",
        "x": 104,
        "y": 234,
      },
      {
        "id": "d2-slot-1",
        "kind": "doodle",
        "name": "partly",
        "size": 26,
        "tone": "muted",
        "x": 313,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d2-slot-1-t",
        "kind": "text",
        "lines": [
          "Afternoon",
        ],
        "size": 24,
        "tone": "muted",
        "x": 347,
        "y": 168,
      },
      {
        "id": "d2-slot-2",
        "kind": "doodle",
        "name": "moon",
        "size": 26,
        "tone": "muted",
        "x": 578,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d2-slot-2-t",
        "kind": "text",
        "lines": [
          "Evening",
        ],
        "size": 24,
        "tone": "muted",
        "x": 612,
        "y": 168,
      },
    ],
    "id": "d2",
    "kind": "day",
    "title": "Day 2",
  },
]
`;

exports[`layoutSketch > matches the Tokyo and Kyoto fixtures > tokyo 1`] = `
[
  {
    "alt": "Tokyo & Kyoto, 12 Oct – 15 Oct 2026 · 4 days · 2 travelers · from Delhi. Route: Tokyo → Kyoto. Preferences: loves food, loves temples, no museums.",
    "day": null,
    "elements": [
      {
        "bold": true,
        "id": "ov-title",
        "kind": "text",
        "lines": [
          "Tokyo & Kyoto",
        ],
        "size": 50,
        "tone": "ink",
        "x": 48,
        "y": 92,
      },
      {
        "id": "ov-rule",
        "kind": "path",
        "points": [
          [
            48,
            108,
          ],
          [
            323.00000000000006,
            112,
          ],
        ],
        "tone": "accent",
      },
      {
        "id": "ov-sub",
        "kind": "text",
        "lines": [
          "12 Oct – 15 Oct 2026 · 4 days · 2 travelers · from Delhi",
        ],
        "size": 24,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "cx": 458,
        "cy": 341,
        "fill": true,
        "h": 78,
        "id": "ov-stop-0",
        "kind": "ellipse",
        "tone": "accent",
        "w": 156,
      },
      {
        "anchor": "middle",
        "bold": true,
        "id": "ov-stop-0-name",
        "kind": "text",
        "lines": [
          "Tokyo",
        ],
        "size": 24,
        "tone": "ink",
        "x": 458,
        "y": 339,
      },
      {
        "anchor": "middle",
        "id": "ov-stop-0-days",
        "kind": "text",
        "lines": [
          "days 1–2",
        ],
        "size": 20,
        "tone": "muted",
        "x": 458,
        "y": 404,
      },
      {
        "cx": 665,
        "cy": 369,
        "fill": true,
        "h": 78,
        "id": "ov-stop-1",
        "kind": "ellipse",
        "tone": "accent",
        "w": 156,
      },
      {
        "anchor": "middle",
        "bold": true,
        "id": "ov-stop-1-name",
        "kind": "text",
        "lines": [
          "Kyoto",
        ],
        "size": 24,
        "tone": "ink",
        "x": 665,
        "y": 367,
      },
      {
        "anchor": "middle",
        "id": "ov-stop-1-days",
        "kind": "text",
        "lines": [
          "days 3–4",
        ],
        "size": 20,
        "tone": "muted",
        "x": 665,
        "y": 432,
      },
      {
        "arrow": true,
        "curve": false,
        "dashed": false,
        "id": "ov-leg-1",
        "kind": "path",
        "points": [
          [
            542,
            341,
          ],
          [
            581,
            369,
          ],
        ],
        "tone": "ink",
      },
      {
        "id": "ov-leg-1-mode",
        "kind": "doodle",
        "name": "train",
        "size": 28,
        "tone": "accent",
        "x": 547.5,
        "y": 315,
      },
      {
        "anchor": "middle",
        "id": "ov-leg-1-time",
        "kind": "text",
        "lines": [
          "2h 15m",
        ],
        "size": 18,
        "tone": "muted",
        "x": 561.5,
        "y": 381,
      },
      {
        "id": "ov-stamp-0",
        "kind": "stamp",
        "rotate": 2.8,
        "text": "loves food",
        "tone": "green",
        "w": 120,
        "x": 48,
        "y": 590,
      },
      {
        "id": "ov-stamp-1",
        "kind": "stamp",
        "rotate": -3.3,
        "text": "loves temples",
        "tone": "green",
        "w": 146,
        "x": 186,
        "y": 590,
      },
      {
        "id": "ov-stamp-2",
        "kind": "stamp",
        "rotate": -5,
        "text": "no museums ×",
        "tone": "red",
        "w": 138,
        "x": 350,
        "y": 590,
      },
      {
        "h": 210,
        "id": "rc-box",
        "kind": "box",
        "tone": "ink",
        "w": 285,
        "x": 790,
        "y": 560,
      },
      {
        "anchor": "middle",
        "bold": true,
        "id": "rc-head",
        "kind": "text",
        "lines": [
          "RECEIPT",
        ],
        "size": 22,
        "tone": "muted",
        "x": 932.5,
        "y": 592,
      },
      {
        "id": "rc-0-l",
        "kind": "text",
        "lines": [
          "Planned",
        ],
        "size": 21,
        "tone": "ink",
        "x": 808,
        "y": 624,
      },
      {
        "anchor": "end",
        "id": "rc-0-v",
        "kind": "text",
        "lines": [
          "¥110,000",
        ],
        "size": 21,
        "tone": "ink",
        "x": 1057,
        "y": 624,
      },
      {
        "id": "rc-1-l",
        "kind": "text",
        "lines": [
          "Spent so far",
        ],
        "size": 21,
        "tone": "ink",
        "x": 808,
        "y": 652,
      },
      {
        "anchor": "end",
        "id": "rc-1-v",
        "kind": "text",
        "lines": [
          "¥20,000",
        ],
        "size": 21,
        "tone": "ink",
        "x": 1057,
        "y": 652,
      },
      {
        "id": "rc-2-l",
        "kind": "text",
        "lines": [
          "Budget",
        ],
        "size": 21,
        "tone": "ink",
        "x": 808,
        "y": 680,
      },
      {
        "anchor": "end",
        "id": "rc-2-v",
        "kind": "text",
        "lines": [
          "¥120,000",
        ],
        "size": 21,
        "tone": "ink",
        "x": 1057,
        "y": 680,
      },
      {
        "dashed": true,
        "id": "rc-rule",
        "kind": "path",
        "points": [
          [
            806,
            704,
          ],
          [
            1059,
            704,
          ],
        ],
        "tone": "muted",
      },
      {
        "bold": true,
        "id": "rc-total-l",
        "kind": "text",
        "lines": [
          "Total",
        ],
        "size": 24,
        "tone": "ink",
        "x": 808,
        "y": 732,
      },
      {
        "anchor": "end",
        "bold": true,
        "id": "rc-total-v",
        "kind": "text",
        "lines": [
          "¥131,000",
        ],
        "size": 24,
        "tone": "red",
        "x": 1057,
        "y": 732,
      },
      {
        "cx": 1014.28,
        "cy": 724,
        "h": 42,
        "id": "rc-circle",
        "kind": "ellipse",
        "tone": "red",
        "w": 115.44,
      },
      {
        "anchor": "end",
        "id": "rc-over",
        "kind": "text",
        "lines": [
          "over by ¥11,000",
        ],
        "size": 19,
        "tone": "red",
        "x": 1057,
        "y": 758,
      },
    ],
    "id": "overview",
    "kind": "overview",
    "title": "Tokyo & Kyoto",
  },
  {
    "alt": "Day 1 · Mon 12 Oct, in Tokyo. Morning: Senso-ji, Tsukiji Outer Market. Afternoon: teamLab Planets. Evening: Omoide Yokocho. Sports Day is a public holiday. Weather forecast.",
    "day": 1,
    "elements": [
      {
        "bold": true,
        "id": "d1-title",
        "kind": "text",
        "lines": [
          "Day 1 · Mon 12 Oct",
        ],
        "size": 46,
        "tone": "ink",
        "x": 48,
        "y": 86,
      },
      {
        "id": "d1-sub",
        "kind": "text",
        "lines": [
          "in Tokyo · about 7 h of plans · about ¥14,000",
        ],
        "size": 23,
        "tone": "muted",
        "x": 48,
        "y": 124,
      },
      {
        "id": "d1-holiday-flag",
        "kind": "doodle",
        "name": "flag",
        "size": 24,
        "tone": "red",
        "x": 501.7300000000003,
        "y": 104,
      },
      {
        "id": "d1-holiday",
        "kind": "text",
        "lines": [
          "Sports Day (holiday)",
        ],
        "size": 21,
        "tone": "red",
        "x": 531.7300000000002,
        "y": 124,
      },
      {
        "id": "d1-wx",
        "kind": "doodle",
        "name": "rain",
        "size": 44,
        "tone": "accent",
        "x": 858,
        "y": 44,
      },
      {
        "bold": true,
        "id": "d1-wx-t",
        "kind": "text",
        "lines": [
          "16–21°C",
        ],
        "size": 26,
        "tone": "ink",
        "x": 914,
        "y": 72,
      },
      {
        "id": "d1-wx-l",
        "kind": "text",
        "lines": [
          "forecast",
        ],
        "size": 18,
        "tone": "muted",
        "x": 858,
        "y": 122,
      },
      {
        "id": "d1-slot-0",
        "kind": "doodle",
        "name": "sun",
        "size": 26,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d1-slot-0-t",
        "kind": "text",
        "lines": [
          "Morning",
        ],
        "size": 24,
        "tone": "muted",
        "x": 82,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d1-p-senso-ji",
        "kind": "box",
        "label": "Senso-ji",
        "tone": "ink",
        "w": 225,
        "x": 48,
        "y": 196,
      },
      {
        "id": "d1-p-senso-ji-icon",
        "kind": "doodle",
        "name": "sight",
        "size": 34,
        "tone": "accent",
        "x": 60,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d1-p-senso-ji-name",
        "kind": "text",
        "lines": [
          "Senso-ji",
        ],
        "size": 25,
        "tone": "ink",
        "x": 104,
        "y": 234,
      },
      {
        "id": "d1-p-senso-ji-meta",
        "kind": "text",
        "lines": [
          "Asakusa · 1.5 h",
        ],
        "size": 18,
        "tone": "muted",
        "x": 62,
        "y": 275,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d1-p-tsukiji-outer-market",
        "kind": "box",
        "label": "Tsukiji Outer Market",
        "tone": "ink",
        "w": 225,
        "x": 48,
        "y": 376,
      },
      {
        "id": "d1-p-tsukiji-outer-market-icon",
        "kind": "doodle",
        "name": "food",
        "size": 34,
        "tone": "accent",
        "x": 60,
        "y": 390,
      },
      {
        "bold": true,
        "id": "d1-p-tsukiji-outer-market-name",
        "kind": "text",
        "lines": [
          "Tsukiji Outer",
          "Market",
        ],
        "size": 25,
        "tone": "ink",
        "x": 104,
        "y": 414,
      },
      {
        "id": "d1-p-tsukiji-outer-market-meta",
        "kind": "text",
        "lines": [
          "¥3,000",
        ],
        "size": 18,
        "tone": "muted",
        "x": 62,
        "y": 482,
      },
      {
        "id": "d1-slot-1",
        "kind": "doodle",
        "name": "partly",
        "size": 26,
        "tone": "muted",
        "x": 313,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d1-slot-1-t",
        "kind": "text",
        "lines": [
          "Afternoon",
        ],
        "size": 24,
        "tone": "muted",
        "x": 347,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d1-p-teamlab-planets",
        "kind": "box",
        "label": "teamLab Planets",
        "tone": "ink",
        "w": 225,
        "x": 313,
        "y": 196,
      },
      {
        "id": "d1-p-teamlab-planets-icon",
        "kind": "doodle",
        "name": "experience",
        "size": 34,
        "tone": "accent",
        "x": 325,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d1-p-teamlab-planets-name",
        "kind": "text",
        "lines": [
          "teamLab Planets",
        ],
        "size": 25,
        "tone": "ink",
        "x": 369,
        "y": 234,
      },
      {
        "id": "d1-p-teamlab-planets-meta",
        "kind": "text",
        "lines": [
          "¥3,800",
        ],
        "size": 18,
        "tone": "muted",
        "x": 327,
        "y": 275,
      },
      {
        "id": "d1-slot-2",
        "kind": "doodle",
        "name": "moon",
        "size": 26,
        "tone": "muted",
        "x": 578,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d1-slot-2-t",
        "kind": "text",
        "lines": [
          "Evening",
        ],
        "size": 24,
        "tone": "muted",
        "x": 612,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d1-p-omoide-yokocho",
        "kind": "box",
        "label": "Omoide Yokocho",
        "tone": "ink",
        "w": 225,
        "x": 578,
        "y": 196,
      },
      {
        "id": "d1-p-omoide-yokocho-icon",
        "kind": "doodle",
        "name": "nightlife",
        "size": 34,
        "tone": "accent",
        "x": 590,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d1-p-omoide-yokocho-name",
        "kind": "text",
        "lines": [
          "Omoide Yokocho",
        ],
        "size": 25,
        "tone": "ink",
        "x": 634,
        "y": 234,
      },
      {
        "arrow": true,
        "id": "d1-a1",
        "kind": "path",
        "points": [
          [
            160.5,
            350,
          ],
          [
            160.5,
            372,
          ],
        ],
        "tone": "muted",
      },
      {
        "arrow": true,
        "curve": true,
        "id": "d1-a2",
        "kind": "path",
        "points": [
          [
            277,
            451,
          ],
          [
            293,
            361,
          ],
          [
            309,
            271,
          ],
        ],
        "tone": "muted",
      },
      {
        "id": "d1-a2-mode",
        "kind": "doodle",
        "name": "train",
        "size": 22,
        "tone": "muted",
        "x": 282,
        "y": 350,
      },
      {
        "arrow": true,
        "curve": true,
        "id": "d1-a3",
        "kind": "path",
        "points": [
          [
            542,
            271,
          ],
          [
            558,
            253,
          ],
          [
            574,
            271,
          ],
        ],
        "tone": "muted",
      },
      {
        "id": "d1-a3-mode",
        "kind": "doodle",
        "name": "train",
        "size": 22,
        "tone": "muted",
        "x": 547,
        "y": 221,
      },
      {
        "h": 150,
        "id": "d1-p-senso-ji-note",
        "kind": "note",
        "lines": [
          "Go before 8 for an empty",
          "Nakamise street",
        ],
        "rotate": 1.6,
        "tag": "reddit",
        "title": "Senso-ji",
        "w": 217,
        "x": 858,
        "y": 176,
      },
      {
        "h": 150,
        "id": "d1-p-teamlab-planets-note",
        "kind": "note",
        "lines": [
          "Wear shorts; you wade",
          "through water",
        ],
        "rotate": 0.6,
        "tag": "quora",
        "title": "teamLab Planets",
        "w": 217,
        "x": 858,
        "y": 360,
      },
    ],
    "id": "d1",
    "kind": "day",
    "title": "Day 1 · Mon 12 Oct",
  },
  {
    "alt": "Day 2 · Tue 13 Oct, in Tokyo.",
    "day": 2,
    "elements": [
      {
        "bold": true,
        "id": "d2-title",
        "kind": "text",
        "lines": [
          "Day 2 · Tue 13 Oct",
        ],
        "size": 46,
        "tone": "ink",
        "x": 48,
        "y": 86,
      },
      {
        "id": "d2-sub",
        "kind": "text",
        "lines": [
          "in Tokyo",
        ],
        "size": 23,
        "tone": "muted",
        "x": 48,
        "y": 124,
      },
      {
        "id": "d2-slot-0",
        "kind": "doodle",
        "name": "sun",
        "size": 26,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d2-slot-0-t",
        "kind": "text",
        "lines": [
          "Morning",
        ],
        "size": 24,
        "tone": "muted",
        "x": 82,
        "y": 168,
      },
      {
        "id": "d2-slot-1",
        "kind": "doodle",
        "name": "partly",
        "size": 26,
        "tone": "muted",
        "x": 313,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d2-slot-1-t",
        "kind": "text",
        "lines": [
          "Afternoon",
        ],
        "size": 24,
        "tone": "muted",
        "x": 347,
        "y": 168,
      },
      {
        "id": "d2-slot-2",
        "kind": "doodle",
        "name": "moon",
        "size": 26,
        "tone": "muted",
        "x": 578,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d2-slot-2-t",
        "kind": "text",
        "lines": [
          "Evening",
        ],
        "size": 24,
        "tone": "muted",
        "x": 612,
        "y": 168,
      },
      {
        "anchor": "middle",
        "id": "d2-empty",
        "kind": "text",
        "lines": [
          "A free day: nothing planned yet.",
        ],
        "size": 26,
        "tone": "muted",
        "x": 425.5,
        "y": 420,
      },
    ],
    "id": "d2",
    "kind": "day",
    "title": "Day 2 · Tue 13 Oct",
  },
  {
    "alt": "Day 3 · Wed 14 Oct, in Kyoto. Morning: Fushimi Inari Taisha, Pontocho dinner. Afternoon: Nishiki Market. Evening: Gion walk.",
    "day": 3,
    "elements": [
      {
        "bold": true,
        "id": "d3-title",
        "kind": "text",
        "lines": [
          "Day 3 · Wed 14 Oct",
        ],
        "size": 46,
        "tone": "ink",
        "x": 48,
        "y": 86,
      },
      {
        "id": "d3-sub",
        "kind": "text",
        "lines": [
          "in Kyoto · about 6 h of plans · about ¥9,000",
        ],
        "size": 23,
        "tone": "muted",
        "x": 48,
        "y": 124,
      },
      {
        "id": "d3-slot-0",
        "kind": "doodle",
        "name": "sun",
        "size": 26,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d3-slot-0-t",
        "kind": "text",
        "lines": [
          "Morning",
        ],
        "size": 24,
        "tone": "muted",
        "x": 82,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d3-p-fushimi-inari-taisha",
        "kind": "box",
        "label": "Fushimi Inari Taisha",
        "tone": "ink",
        "w": 225,
        "x": 48,
        "y": 196,
      },
      {
        "id": "d3-p-fushimi-inari-taisha-icon",
        "kind": "doodle",
        "name": "sight",
        "size": 34,
        "tone": "accent",
        "x": 60,
        "y": 210,
      },
      {
        "h": 62,
        "id": "d3-p-fushimi-inari-taisha-hl",
        "kind": "highlight",
        "w": 147.50000000000003,
        "x": 100,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d3-p-fushimi-inari-taisha-name",
        "kind": "text",
        "lines": [
          "Fushimi Inari",
          "Taisha",
        ],
        "size": 25,
        "tone": "ink",
        "x": 104,
        "y": 234,
      },
      {
        "dashed": true,
        "h": 150,
        "id": "d3-p-pontocho-dinner",
        "kind": "box",
        "label": "Pontocho dinner",
        "tone": "muted",
        "w": 225,
        "x": 48,
        "y": 376,
      },
      {
        "id": "d3-p-pontocho-dinner-icon",
        "kind": "doodle",
        "name": "food",
        "size": 34,
        "tone": "accent",
        "x": 60,
        "y": 390,
      },
      {
        "bold": true,
        "id": "d3-p-pontocho-dinner-name",
        "kind": "text",
        "lines": [
          "Pontocho dinner",
        ],
        "size": 25,
        "tone": "ink",
        "x": 104,
        "y": 414,
      },
      {
        "id": "d3-p-pontocho-dinner-meta",
        "kind": "text",
        "lines": [
          "optional",
        ],
        "size": 18,
        "tone": "muted",
        "x": 62,
        "y": 455,
      },
      {
        "id": "d3-slot-1",
        "kind": "doodle",
        "name": "partly",
        "size": 26,
        "tone": "muted",
        "x": 313,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d3-slot-1-t",
        "kind": "text",
        "lines": [
          "Afternoon",
        ],
        "size": 24,
        "tone": "muted",
        "x": 347,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d3-p-nishiki-market",
        "kind": "box",
        "label": "Nishiki Market",
        "tone": "ink",
        "w": 225,
        "x": 313,
        "y": 196,
      },
      {
        "id": "d3-p-nishiki-market-icon",
        "kind": "doodle",
        "name": "food",
        "size": 34,
        "tone": "accent",
        "x": 325,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d3-p-nishiki-market-name",
        "kind": "text",
        "lines": [
          "Nishiki Market",
        ],
        "size": 25,
        "tone": "ink",
        "x": 369,
        "y": 234,
      },
      {
        "id": "d3-slot-2",
        "kind": "doodle",
        "name": "moon",
        "size": 26,
        "tone": "muted",
        "x": 578,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d3-slot-2-t",
        "kind": "text",
        "lines": [
          "Evening",
        ],
        "size": 24,
        "tone": "muted",
        "x": 612,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d3-p-gion-walk",
        "kind": "box",
        "label": "Gion walk",
        "tone": "ink",
        "w": 225,
        "x": 578,
        "y": 196,
      },
      {
        "id": "d3-p-gion-walk-icon",
        "kind": "doodle",
        "name": "sight",
        "size": 34,
        "tone": "accent",
        "x": 590,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d3-p-gion-walk-name",
        "kind": "text",
        "lines": [
          "Gion walk",
        ],
        "size": 25,
        "tone": "ink",
        "x": 634,
        "y": 234,
      },
      {
        "arrow": true,
        "id": "d3-a1",
        "kind": "path",
        "points": [
          [
            160.5,
            350,
          ],
          [
            160.5,
            372,
          ],
        ],
        "tone": "muted",
      },
      {
        "arrow": true,
        "curve": true,
        "id": "d3-a2",
        "kind": "path",
        "points": [
          [
            277,
            451,
          ],
          [
            293,
            361,
          ],
          [
            309,
            271,
          ],
        ],
        "tone": "muted",
      },
      {
        "id": "d3-a2-mode",
        "kind": "doodle",
        "name": "train",
        "size": 22,
        "tone": "muted",
        "x": 282,
        "y": 350,
      },
      {
        "arrow": true,
        "curve": true,
        "id": "d3-a3",
        "kind": "path",
        "points": [
          [
            542,
            271,
          ],
          [
            558,
            253,
          ],
          [
            574,
            271,
          ],
        ],
        "tone": "muted",
      },
      {
        "id": "d3-a3-mode",
        "kind": "doodle",
        "name": "train",
        "size": 22,
        "tone": "muted",
        "x": 547,
        "y": 221,
      },
      {
        "h": 150,
        "id": "d3-p-fushimi-inari-taisha-note",
        "kind": "note",
        "lines": [
          "Climb past the",
          "Yotsutsuji crossing, the",
          "crowds thin out",
        ],
        "rotate": -1.7,
        "tag": null,
        "title": "Fushimi Inari Taisha",
        "w": 217,
        "x": 858,
        "y": 176,
      },
    ],
    "id": "d3",
    "kind": "day",
    "title": "Day 3 · Wed 14 Oct",
  },
  {
    "alt": "Day 4 · Thu 15 Oct, in Kyoto. Morning: 嵐山 竹林の小径.",
    "day": 4,
    "elements": [
      {
        "bold": true,
        "id": "d4-title",
        "kind": "text",
        "lines": [
          "Day 4 · Thu 15 Oct",
        ],
        "size": 46,
        "tone": "ink",
        "x": 48,
        "y": 86,
      },
      {
        "id": "d4-sub",
        "kind": "text",
        "lines": [
          "in Kyoto",
        ],
        "size": 23,
        "tone": "muted",
        "x": 48,
        "y": 124,
      },
      {
        "id": "d4-slot-0",
        "kind": "doodle",
        "name": "sun",
        "size": 26,
        "tone": "muted",
        "x": 48,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d4-slot-0-t",
        "kind": "text",
        "lines": [
          "Morning",
        ],
        "size": 24,
        "tone": "muted",
        "x": 82,
        "y": 168,
      },
      {
        "dashed": false,
        "h": 150,
        "id": "d4-p-嵐山-竹林の小径",
        "kind": "box",
        "label": "嵐山 竹林の小径",
        "tone": "ink",
        "w": 225,
        "x": 48,
        "y": 196,
      },
      {
        "id": "d4-p-嵐山-竹林の小径-icon",
        "kind": "doodle",
        "name": "nature",
        "size": 34,
        "tone": "accent",
        "x": 60,
        "y": 210,
      },
      {
        "bold": true,
        "id": "d4-p-嵐山-竹林の小径-name",
        "kind": "text",
        "lines": [
          "嵐山",
          "竹林の小径",
        ],
        "size": 25,
        "tone": "ink",
        "x": 104,
        "y": 234,
      },
      {
        "id": "d4-slot-1",
        "kind": "doodle",
        "name": "partly",
        "size": 26,
        "tone": "muted",
        "x": 313,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d4-slot-1-t",
        "kind": "text",
        "lines": [
          "Afternoon",
        ],
        "size": 24,
        "tone": "muted",
        "x": 347,
        "y": 168,
      },
      {
        "id": "d4-slot-2",
        "kind": "doodle",
        "name": "moon",
        "size": 26,
        "tone": "muted",
        "x": 578,
        "y": 146,
      },
      {
        "bold": true,
        "id": "d4-slot-2-t",
        "kind": "text",
        "lines": [
          "Evening",
        ],
        "size": 24,
        "tone": "muted",
        "x": 612,
        "y": 168,
      },
    ],
    "id": "d4",
    "kind": "day",
    "title": "Day 4 · Thu 15 Oct",
  },
]
`;
